# ILDbench_QGC

./: .gitignore  Readme.md
FinalStateAnalysis/: .gitignore  Readme.md  tags
FinalStateAnalysis/CMakeLists/: 02_00_02_CMakeLists.txt  17_11_CMakeLists.txt  19_05_CMakeLists.txt
FinalStateAnalysis/TJJetRecoParticleFinder/: CMakeLists.txt  Readme.md
FinalStateAnalysis/include/: JakobsVBSProcessor.h  LCIOHelpers.h  TrueJet_Parser.h  VpairFinder.h  jet_corrections.h  tags
FinalStateAnalysis/lib/: libJakobsVBSProcessor.so.0.1
FinalStateAnalysis/scripts/: event_file_dictionary.db  get_database_entry.sh  out.out  run_class.sh  run_event_selection.sh  run_make.sh  run_overlayremoval_testsamples.sh  run_plotting.sh  set_xml.sh  single_HTC_job.submit  single_HTC_run.sh  subscript_class_filemerge.sh
FinalStateAnalysis/src/: Adjusted_TrueJet_Parser.cc  CPPHelperFunctions.cc  CollectionReaders.cc  CutParameterCalculation.cc  GeneratorLevelChecks.cc  JakobsVBSProcessor.cc  JetCorrection.cc  LinkRecoAndTrueVPairs.cc  VBSAnalysis.cc  tags
FinalStateAnalysis/xml/: template.xml
QGCAnalysis/: .gitignore  CMakeLists.txt  Readme.md
QGCAnalysis/source/: CMakeLists.txt
QGCAnalysis/source/include/: PDGIDChecks.h  StandardIncludes.h  aQGCObservablesProcessor.h
QGCAnalysis/source/src/: AnalysisMCTruth.cpp  CleanEvent.cpp  TFileContent.cpp
doc/: Readme.md
macros/: Readme.md  run_make.sh
macros/Marlin_macros/: get_setup_directory.sh  manage_process_files.sh  run_all_aQGC_files.sh  run_all_signal_files.sh  (+4 more)
scripts/: ExampleProcessor.xml  Readme.md
source/: CMakeLists.txt
(+392 files in other folders)
